--- a/platformio.ini
+++ b/platformio.ini
@@ -13,9 +13,9 @@ platform = espressif32
 board = seeed_xiao_esp32c3
 framework = arduino
 lib_deps = 
-    wnatth3/WiFiManager@^2.0.16-rc.2
+    ; wnatth3/WiFiManager@^2.0.16-rc.2
     arkhipenko/TaskScheduler@^3.7.0
     tockn/MPU6050_tockn@^1.5.2
-	arduino-libraries/Madgwick@^1.2.0
+	; arduino-libraries/Madgwick@^1.2.0
 build_flags = -D SEED_XIAO_ESP32C3
 
