--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,7 @@ platform = espressif32
 board = seeed_xiao_esp32c3
 framework = arduino
 lib_deps = 
-    wnatth3/WiFiManager@^2.0.16-rc.2
+    ; wnatth3/WiFiManager@^2.0.16-rc.2
     arkhipenko/TaskScheduler@^3.7.0
     mbed-syundo0730/I2Cdev@0.0.0+sha.3aa973ebe3e5
 	electroniccats/MPU6050@^1.2.0
