add interrupt pin by borad varios

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,9 +13,29 @@ platform = espressif32
 board = seeed_xiao_esp32c3
 framework = arduino
 lib_deps = 
-    ; wnatth3/WiFiManager@^2.0.16-rc.2
-    arkhipenko/TaskScheduler@^3.7.0
-    mbed-syundo0730/I2Cdev@0.0.0+sha.3aa973ebe3e5
+	arkhipenko/TaskScheduler@^3.7.0
+	mbed-syundo0730/I2Cdev@0.0.0+sha.3aa973ebe3e5
 	electroniccats/MPU6050@^1.2.0
 build_flags = -D SEED_XIAO_ESP32C3
 
+[env:esp-wrover-kit]
+board = esp-wrover-kit
+platform = espressif32
+framework = arduino
+monitor_speed = 115200
+lib_deps = 
+	arkhipenko/TaskScheduler@^3.7.0
+	mbed-syundo0730/I2Cdev@0.0.0+sha.3aa973ebe3e5
+	electroniccats/MPU6050@^1.2.0
+build_flags = -D WROVER_KIT
+
+[env:esp-wroom-32]
+board = upesy_wroom
+platform = espressif32
+framework = arduino
+monitor_speed = 115200
+lib_deps = 
+	arkhipenko/TaskScheduler@^3.7.0
+	mbed-syundo0730/I2Cdev@0.0.0+sha.3aa973ebe3e5
+	electroniccats/MPU6050@^1.2.0
+build_flags = -D WROVER_KIT
