--- a/platformio.ini
+++ b/platformio.ini
@@ -14,8 +14,20 @@ board = seeed_xiao_esp32c3
 framework = arduino
 lib_deps = 
     ; wnatth3/WiFiManager@^2.0.16-rc.2
+    sparkfun/SparkFun BNO080 Cortex Based IMU@^1.1.12
     arkhipenko/TaskScheduler@^3.7.0
     tockn/MPU6050_tockn@^1.5.2
 	; arduino-libraries/Madgwick@^1.2.0
 build_flags = -D SEED_XIAO_ESP32C3
+
+[env:esp-wrover-kit]
+platform = espressif32
+board = esp-wrover-kit
+framework = arduino
+monitor_speed = 115200
+lib_deps = 
+    sparkfun/SparkFun BNO080 Cortex Based IMU@^1.1.12
+    arkhipenko/TaskScheduler@^3.7.0
+    tockn/MPU6050_tockn@^1.5.2
+build_flags = -D WROVER_KIT
 
