--- a/imu_unity3d/Assembly-CSharp.csproj
+++ b/imu_unity3d/Assembly-CSharp.csproj
@@ -59,12 +59,13 @@
     <UnityVersion>2023.2.3f1</UnityVersion>
   </PropertyGroup>
   <ItemGroup>
-    <Analyzer Include="/Users/gbox3d/.vscode/extensions/visualstudiotoolsforunity.vstuc-0.9.4/Analyzers/Microsoft.Unity.Analyzers.dll" />
+    <Analyzer Include="/Users/seokjunlee/.vscode/extensions/visualstudiotoolsforunity.vstuc-1.0.0/Analyzers/Microsoft.Unity.Analyzers.dll" />
     <Analyzer Include="/Volumes/data/unity/editor/2023.2.3f1/Unity.app/Contents/Tools/Unity.SourceGenerators/Unity.SourceGenerators.dll" />
     <Analyzer Include="/Volumes/data/unity/editor/2023.2.3f1/Unity.app/Contents/Tools/Unity.SourceGenerators/Unity.Properties.SourceGenerator.dll" />
     <Analyzer Include="/Volumes/data/unity/editor/2023.2.3f1/Unity.app/Contents/Tools/Unity.SourceGenerators/Unity.UIToolkit.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets/script/imuReciever_bno08x.cs" />
     <Compile Include="Assets/script/packetMonitor.cs" />
     <Compile Include="Assets/script/imuReciever_Quaternion.cs" />
     <Compile Include="Assets/script/commandSample.cs" />
