--- a/platformio.ini
+++ b/platformio.ini
@@ -14,8 +14,7 @@ board = seeed_xiao_esp32c3
 framework = arduino
 lib_deps = 
 	arkhipenko/TaskScheduler@^3.7.0
-	mbed-syundo0730/I2Cdev@0.0.0+sha.3aa973ebe3e5
-	electroniccats/MPU6050@^1.2.0
+	sparkfun/SparkFun BNO08x Cortex Based IMU@^1.0.5
 build_flags = -D SEED_XIAO_ESP32C3
 
 [env:esp-wrover-kit]
@@ -25,8 +24,7 @@ framework = arduino
 monitor_speed = 115200
 lib_deps = 
 	arkhipenko/TaskScheduler@^3.7.0
-	mbed-syundo0730/I2Cdev@0.0.0+sha.3aa973ebe3e5
-	electroniccats/MPU6050@^1.2.0
+	sparkfun/SparkFun BNO08x Cortex Based IMU@^1.0.5
 build_flags = -D WROVER_KIT
 
 [env:esp-wroom-32]
@@ -36,6 +34,6 @@ framework = arduino
 monitor_speed = 115200
 lib_deps = 
 	arkhipenko/TaskScheduler@^3.7.0
-	mbed-syundo0730/I2Cdev@0.0.0+sha.3aa973ebe3e5
-	electroniccats/MPU6050@^1.2.0
+	sparkfun/SparkFun BNO08x Cortex Based IMU@^1.0.5
 build_flags = -D WROVER_KIT
+
