--- a/reciver/platformio.ini
+++ b/reciver/platformio.ini
@@ -13,6 +13,8 @@ platform = espressif8266
 board = d1_mini_pro
 framework = arduino
 monitor_speed = 115200
+upload_speed = 460800
 lib_deps = 
 	arkhipenko/TaskScheduler@^3.7.0
 	me-no-dev/ESPAsyncUDP@0.0.0-alpha+sha.697c75a025
+	
