--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,7 @@
 platform = espressif32
 board = seeed_xiao_esp32c3
 framework = arduino
+monitor_speed = 115200
 lib_deps = 
 	arkhipenko/TaskScheduler@^3.7.0
 	mbed-syundo0730/I2Cdev@0.0.0+sha.3aa973ebe3e5
