--- a/6050DMP/platformio.ini
+++ b/6050DMP/platformio.ini
@@ -17,6 +17,7 @@ lib_deps =
 	arkhipenko/TaskScheduler@^3.7.0
 	mbed-syundo0730/I2Cdev@0.0.0+sha.3aa973ebe3e5
 	electroniccats/MPU6050@^1.2.0
+	adafruit/Adafruit NeoPixel@^1.12.2
 build_flags = -D SEED_XIAO_ESP32C3
 
 [env:esp-wrover-kit]
